# Fake-Currency-Detection-System

./: .gitignore  ACCURACY_IMPROVEMENTS.md  CORS_FIX_GUIDE.md  ENHANCED_IMPROVEMENTS_SUMMARY.md  ENHANCEMENT_STATUS.md  IEEE_Research_Paper.docx  IMPROVEMENTS_SUMMARY.md  README.docx  README.md  README_v2.md  REFACTORING.docx  REFACTORING.md  TRAINING_STATUS.md  setup.docx  test_improvements.py  user_guide.docx
backend/: .env.example  DATASET_DOWNLOAD.md  TEST_REPORT.md  auto_train_and_validate.py  cnn_classifier.py  collect_datasets.py  config.py  database.py  main.py  monitor_training.py  pyproject.toml  requirements.txt  test_api.py  test_application.py  test_cors.py  test_validation.py  test_validation_full.py  train_advanced.py  train_enhanced.py  train_quick.py
backend/models/: .gitkeep  schemas.py
backend/orm_models/: analysis.py
backend/routers/: analyze.py  history.py
backend/services/: cnn_classifier.py  ensemble_engine.py  image_annotator.py  image_preprocessor.py  model_loader.py  opencv_analyzer.py
docs/: API_REFERENCE.docx  API_REFERENCE.md  CLEANUP_SUMMARY.md  CPU_GPU_COMPATIBILITY.docx  CPU_GPU_COMPATIBILITY.md  CPU_ONLY_QUICK_GUIDE.docx  CPU_ONLY_QUICK_GUIDE.md  CURRENCY_SECURITY_FEATURES.md  DEPLOYMENT_GUIDE.docx  DEPLOYMENT_GUIDE.md  DOCUMENT_INVENTORY.docx  DOCUMENT_INVENTORY.md  ENHANCED_TRAINING_GUIDE.md  IEEE_Conference_Paper_Hybrid_Currency_Authentication.docx  IEEE_PAPER_ENHANCED_SYSTEM.md  IEEE_Research_Paper.md  IMAGE_PROCESSING_QUICK_REFERENCE.docx  IMAGE_PROCESSING_QUICK_REFERENCE.md  IMAGE_PROCESSING_TECHNIQUES.docx  README.docx  (+14 more)
(+2 files in other folders)
